added hovered tooltip descriptions for navbar

--- a/frontend/recipes/src/styles/NavBar.css
+++ b/frontend/recipes/src/styles/NavBar.css
@@ -10,4 +10,11 @@ body {
   html, body {
     height: 100%;
   }
+
+  @media screen and (max-width: 600px) {
+    .chakra-tooltip {
+      placement: top;
+    }
+    
+  }
   
