--- a/frontend/recipes/src/styles/home.css
+++ b/frontend/recipes/src/styles/home.css
@@ -23,3 +23,28 @@ h2 {
     color: white;
     font-size: 40px;
 }
+
+@media (max-width: 600px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    .chakra-button {
+        font-size: 20px;
+        height: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        :hover {
+            background-color: 'white';
+            color: '#9EAFBB';
+            border: '4px solid #9EAFBB';
+            cursor: 'pointer';
+        }
+    }
+}
