--- a/frontend/recipes/src/index.css
+++ b/frontend/recipes/src/index.css
@@ -1,6 +1,5 @@
-@import './variables.css';
-
-html, body {
-  /* background-color: rgb(30, 175, 223); */
-  min-height: 100vh;
-}
+.content {
+    flex: 1;
+    margin-left: 100px; /* Adjust this if your sidebar width is different */
+    padding: 20px; /* Add any additional padding as needed */
+  }
