--- a/frontend/recipes/src/index.css
+++ b/frontend/recipes/src/index.css
@@ -1,5 +1,5 @@
 .content {
     flex: 1;
-
+    margin-left: 100px; /* Adjust this if your sidebar width is different */
     padding: 20px; /* Add any additional padding as needed */
   }
