--- a/frontend/recipes/src/styles/NavBar.css
+++ b/frontend/recipes/src/styles/NavBar.css
@@ -1,11 +1,11 @@
 body {
     margin: 0;
     overflow-x: hidden;
-    padding-left: 120px;
+    /* padding-left: 120px; */
   }
   
   .sidebar {
-    padding: 0;
+    padding: 120px;
   }
   
   html, body {
