--- a/frontend/recipes/src/styles/recipedetails.css
+++ b/frontend/recipes/src/styles/recipedetails.css
@@ -7,8 +7,15 @@
 
 .main-content {
     margin-left: 110px;
+    margin-right: 15px;
+}
+
+.header {
+background-color: pink !important;
+/* m-width: none; */
 }
 
 .card {
     background-color: var(--card);
+    border-radius: 20px;
 }
