--- a/frontend/recipes/src/styles/chat.css
+++ b/frontend/recipes/src/styles/chat.css
@@ -105,40 +105,43 @@
   padding-left: 20px;
   height: 40px;
   width: 500px !important;
-  background-color: var(--main-bg-color);
+  background-color: #E8F0F5 !important;
   border: none;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px !important;
+  border-bottom-left-radius: 30px !important;
   font-size: 16px;
+  outline: none !important;
+  box-shadow: none
 }
 
 .send-message:focus {
   outline: none !important;
   border: none !important;
   box-shadow: none !important; 
-  background-color: var(--main-bg-color);
+  background-color: #E8F0F5 !important;
+  box-shadow: none
 }
 
 .send-button {
   height: 40px;
-  margin-left: -5px;
+  margin-left: -6px !important;
   padding-top: 0px;
   padding-bottom: 0px;
   padding-right: 20px;
   border: none !important;
-  border-color: var(--main-bg-color) !important;
-  background-color: var(--main-bg-color)!important;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
+  border-color: #E8F0F5 !important;
+  background-color: #E8F0F5 !important;
+  border-top-right-radius: 30px !important;
+  border-bottom-right-radius: 30px !important;
 }
 
 .send-button:hover {
-  background-color: var(--main-bg-color)!important;
+  background-color: #E8F0F5!important;
   box-shadow: none !important; 
 }
 
 .send-button:focus {
-    background-color: var(--main-bg-color)!important;
+    background-color: #E8F0F5 !important;
     box-shadow: none !important; 
   }
 
