--- a/frontend/recipes/src/styles/recipes.css
+++ b/frontend/recipes/src/styles/recipes.css
@@ -48,6 +48,8 @@
   border-radius: 10px;
   transition: transform 0.3s ease, background-color 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 500px; /* Set a maximum width for the card */
+  overflow: hidden; /* Handle any overflow */
 }
 
 .IndividualRecipe:hover {
@@ -61,8 +63,9 @@
 }
 
 .recipe-image {
-  width: 350px;
-  height: 350px;
+  align-items: center;
+  width: 400px;
+  height: 400px;
   object-fit: cover;
   border-radius: 10px;
 }
