fixed styling for home page

--- a/frontend/recipes/src/styles/home.css
+++ b/frontend/recipes/src/styles/home.css
@@ -13,14 +13,18 @@
     overflow: hidden;
 }
 
+.landingheader {
+    color: white !important;
+}
+
 h1{
-    color:white;
+    color:white !important;
     font-weight: bold;
     font-size: 70px;
 }
 
 h2 {
-    color: white;
+    color: white !important;
     font-size: 40px;
 }
 
