--- a/frontend/recipes/src/styles/recipedetails.css
+++ b/frontend/recipes/src/styles/recipedetails.css
@@ -1,112 +1,139 @@
-@import '../variables.css';
+@import "../variables.css";
 
-h1,h2,h3 {
-    color: black;
+h1,
+h2,
+h3 {
+  color: black !important;
 }
 
 .main-page {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 25px;
-}
-
-.main-content {
-    margin-right: 15px;
-}
-
-.card {
-    background-color: var(--card);
-    border-radius: 20px;
-}
-
-.ingredients-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.image-container {
-    margin: 15px;
-    margin-bottom: 0px;
-    width: 450px;
-    height: 300px;
-    overflow: hidden; 
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-.ingredients {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    /* background-color: blueviolet; */
-}
-
-.ingredients-list {
-    display: flex;
-    flex-direction: column;
-    padding-left: 15px;
-    padding-right: 15px;
-    max-height: 350px;
-    /* background-color: blueviolet; */
-    overflow: auto;
-}
-
-.duration-and-author {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap:30px;
-    margin-left: 50px;
-}
-
-.duration {
-    display: flex;
-    flex-direction: row;
-}
-
-.nutrition-facts-container {
-    margin-left: 15px;
-}
-
-.nutrients {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 200px;
-}
-
-.nutrient {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 25px;
+  margin-right: 15px;
+  /* background-color: beige; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
 }
 
 .title {
-    display: flex;
-    width: 490px;
-    justify-content: space-between;
-    align-items: center;
-    background-color: bisque;
+  justify-self: start;
+  display: flex;
+
+  align-items: center;
+  /* background-color: bisque; */
+}
+
+.duration-and-author {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
+  /* background-color: aquamarine; */
 }
 
 .save-button-container {
-    margin-left: 800px;
+  justify-self: end;
+  background-color: azure;
+  /* margin-right: 800px; */
+}
+
+.save-button {
+  background-color: none !important;
+}
+
+.duration {
+  display: flex;
+  flex-direction: row;
+}
+
+.main-content {
+  margin-right: 15px;
+}
+
+.card {
+  background-color: var(--card);
+  border-radius: 20px;
+}
+
+.ingredients-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-container {
+  margin: 15px;
+  margin-bottom: 0px;
+  width: 450px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.ingredients {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* background-color: blueviolet; */
+}
+
+.ingredients-list {
+  display: flex;
+  flex-direction: column;
+  padding-left: 15px;
+  padding-right: 15px;
+  max-height: 350px;
+  /* background-color: blueviolet; */
+  overflow: auto;
+}
+
+.nutrition-facts-container {
+  margin-left: 15px;
+}
+
+.nutrients {
+  /* display: flex;
+    flex-direction: row;
+    align-items: center; */
+  /* gap: 130px; */
+  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  /* background-color: aliceblue; */
+  margin-right: 15px;
+  margin-left: -65px;
+}
+
+.nutrient {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  /* background-color: blue; */
+}
+
+.all-nutrients {
+  max-height: 350px;
+  overflow: scroll;
+}
+
+.modal-nutrient {
+    font-size: large;
 }
 
 .action-button {
-    background-color: var(--confirmation-button) !important;
+  background-color: var(--confirmation-button) !important;
+  width: 150px !important;
 }
