--- a/frontend/recipes/src/styles/recipedetails.css
+++ b/frontend/recipes/src/styles/recipedetails.css
@@ -54,6 +54,7 @@ h3 {
 
 .main-content {
   margin-right: 15px;
+  /* background-color: antiquewhite; */
 }
 
 .card {
@@ -136,4 +137,129 @@ h3 {
 .action-button {
   background-color: var(--confirmation-button) !important;
   width: 150px !important;
+}
+
+.reviews-container {
+  display: flex;
+  gap: 15px; 
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: 15px;
+  overflow: scroll;
+}
+
+.review {
+  flex: 0 0 auto; 
+  width: 490px; 
+  height: 500px;
+  border-radius: 15px;
+  margin-top: 15px;
+  background-color: #D9D9D9;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 15px;
+}
+
+.reviews-section {
+  display: flex;
+  flex-direction: column;
+  margin-top: -180px;
+}
+
+.reviews-title {
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
+
+.title {
+  font-size: 28px;
+  margin: none;
+    overflow-wrap: break-word; /* Allow the text to wrap if it overflows */
+  word-break: break-word; /* Ensure long words break */
+}
+
+.title-date {
+  display: grid;
+  grid-template-columns: 2fr 1fr; /* 2:1 ratio */
+  gap: 10px; /* Optional: add some space between the columns */
+  align-items: start; 
+  /* background-color: antiquewhite; */
+}
+
+.date {
+  text-align: center;
+  margin-top: 2px;
+}
+
+.rating {
+  font-size: 28px;
+  margin: none;
+    overflow-wrap: break-word; /* Allow the text to wrap if it overflows */
+  word-break: break-word; /* Ensure long words break */
+}
+
+.rating-author {
+  display: grid;
+  grid-template-columns: 2fr 1fr; /* 2:1 ratio */
+  gap: 10px; /* Optional: add some space between the columns */
+  align-items: start; 
+  margin-top: 15px;
+}
+
+.author {
+  text-align: center;
+  margin-top: 2px;
+}
+
+.description {
+  margin-top: 15px;
+}
+
+.reply-container {
+  display: inline;
+  display: grid;
+  grid-template-rows: 5fr 1fr;
+  gap: 10px; 
+  margin-left: 15px;
+}
+
+.reply-upvote {
+  display: inline;
+  display: grid;
+  grid-template-columns: 5fr 1fr; /* 2:1 ratio */
+  gap: 10px; 
+}
+
+.reply {
+  display: flex; /* Use flexbox to align items vertically */
+  /* margin-left: 10px; */
+  padding-left: 5px;
+  margin-top: 15px;
+  border-left: 2px solid #6c6c6c;
+  /* background-color: aquamarine; */
+}
+
+.upvote-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 15px;
+  /* background-color: bisque; */
+}
+
+.reply-author {
+
+}
+
+.author-date {
+  display: grid;
+  grid-template-columns: 2fr 1fr; /* 2:1 ratio */
+  gap: 10px; /* Optional: add some space between the columns */
+  align-items: start; 
+  /* margin-top: 15px; */
+}
+
+.reply-date {
+  text-align: center;
+  margin-top: 2px;
 }
