--- a/frontend/recipes/src/styles/recipes.css
+++ b/frontend/recipes/src/styles/recipes.css
@@ -5,9 +5,11 @@
   padding-right: 20px;
   padding-top: 40px;
 }
+
 .recipesh1 {
-  padding-right: 15px;
+  margin-right: 15px; /* Updated from padding to margin for consistency */
 }
+
 .input-search {
   flex: 1;
   padding: 10px;
@@ -17,14 +19,22 @@
   border: 1px solid #ccc;
 }
 
-.sorting-dropdown {
+.search-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  margin-right: 20px;
+}
+
+.sorting-dropdown, .cuisine-type {
   padding: 10px;
   font-size: 16px;
   border-radius: 5px;
   border: 1px solid #ccc;
+  width: 200px; /* Fixed width to maintain consistency */
+  margin-right: 20px;
 }
 
-.user-recipes {
+.user-recipes, .edamam-recipes {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start; /* Align items to the left */
@@ -103,31 +113,6 @@
   background-color: #e0e0e0;
 }
 
-.star-r {
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-  background-color: #9C0F20;
-  clip-path: polygon(
-    50% 0%,
-    61% 35%,
-    98% 35%,
-    68% 57%,
-    79% 91%,
-    50% 70%,
-    21% 91%,
-    32% 57%,
-    2% 35%,
-    39% 35%
-  );
-}
-
-.star-r.empty-r {
-  background-color:  #fbf5da;
-}
-
-
-
 .star.quarter {
   background: linear-gradient(to right, #ffd700 35%, #e0e0e0 35%);
 }
@@ -180,4 +165,12 @@
 
 .time-and-author .author {
   margin-left: auto; /* Pushes the author to the right */
+}
+
+.IndividualRecipe {
+  height: 700px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Ensure content is spaced evenly */
 }
