--- a/frontend/recipes/src/styles/recipes.css
+++ b/frontend/recipes/src/styles/recipes.css
@@ -9,6 +9,13 @@
 .recipesh1 {
   margin-right: 15px; /* Updated from padding to margin for consistency */
 }
+.edamam-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  margin-right: 20px; /* Add margin to the right for spacing */
+}
+
+
 
 .input-search {
   flex: 1;
@@ -134,15 +141,14 @@
 }
 
 .rating-text {
-  margin-left: 10px; /* Add some spacing between stars and text */
-  font-size: 16px; /* Adjust font size as needed */
-  color: #333; /* Adjust color as needed */
+  margin-left: 10px; 
+  font-size: 16px; 
 }
 
 .number-of-reviews {
-  margin-left: auto; /* Push the reviews count to the right */
-  font-size: 14px; /* Adjust font size as needed */
-  color: #666; /* Adjust color as needed */
+  margin-left: auto; 
+  font-size: 14px;
+  color: #666; 
 }
 
 .timer-image {
@@ -155,16 +161,16 @@
 .time-and-author {
   display: flex;
   align-items: center;
-  justify-content: space-between; /* Ensures time on the left and author on the right */
-  width: 100%; /* Ensure it takes the full width of the parent container */
+  justify-content: space-between; 
+  width: 100%; 
 }
 
 .time-and-author p {
-  margin: 0; /* Remove default margin for the paragraphs */
+  margin: 0; 
 }
 
 .time-and-author .author {
-  margin-left: auto; /* Pushes the author to the right */
+  margin-left: auto; 
 }
 
 .IndividualRecipe {
@@ -172,5 +178,5 @@
   width: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Ensure content is spaced evenly */
+  justify-content: space-between; 
 }
