--- a/frontend/recipes/src/styles/adminpage.css
+++ b/frontend/recipes/src/styles/adminpage.css
@@ -1,5 +1,24 @@
-.header{
-    color: black;
-    font-size: 35px;
-    font-weight: bold !important;
+.header {
+  color: black;
+  font-size: 35px;
+  font-weight: bold !important;
+}
+
+.individual-recipe {
+  max-width: 100%;
+  box-sizing: border-box;
+  transition: transform 0.3s;
+}
+
+.individual-recipe:hover {
+  transform: scale(1.02);
+  z-index: 100;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.page-container{
+  display: flex;
+  flex-direction: column;
+  padding-left: 15px;
+  padding-right: 35px;
 }
